samples/_failures_safe/1761162972_96d7c5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_745308c6.c: In function ‘main’:
./samples/SAFE/__tmp_745308c6.c:167:5: error: expected expression at end of input
  167 |     int result =
      |     ^~~
./samples/SAFE/__tmp_745308c6.c:167:5: error: expected declaration or statement at end of input
